fixed spacing on safari and firefox

--- a/base.css
+++ b/base.css
@@ -1,13 +1,18 @@
 
 html{
   background-color:#141414;
-  font-family: 'Roboto', sans-serif;
   overflow: hidden;
   font-family: "neue-haas-grotesk-text", sans-serif;
   font-weight: 400;
   font-style: normal;
 }
 
+.header {
+  display: block;
+  width: 100%;
+  height: 30vh; /* Fallback for browsers that do not support Custom Properties */
+  height: calc(var(--vh, 1vh) * 30);
+}
 
 h1 a {
   color:#e6e6dd;  
@@ -29,32 +34,35 @@ a {
   font-size: 2vh;
 }
 
-
 .content {
   text-align: center;
-
-  .link {
-    color:#b9b9b9;  
-    padding: 0.3em 1em 0.3em 1em;
-  }
-
-  .name {
-    margin-top: 31vh;
-  }
-
-  .link-box {
-    position: relative;
-    text-align: center;
-    bottom: -40vh;
-  }
 }
 
+.link {
+  color:#b9b9b9;
+  padding: 0.3em 1em 0.3em 1em;
+}
+
+.link-box {
+  bottom: -35vh; /* Fallback for browsers that do not support Custom Properties */
+  bottom: calc(var(--vh, 1vh) * -35);
+  position: relative;
+  text-align: center;
+}
 
 @media screen and (max-device-width: 800px) {
-
   a.link {
-    font-size: 3.5rem;
+    font-size: 1.5rem;
     display: block;
+  }
+
+  .name a{
+    font-size: 4em;
+  }
+  
+  .link-box {
+    bottom: -15vh; /* Fallback for browsers that do not support Custom Properties */
+    bottom: calc(var(--vh, 1vh) * -15);
   }
 }
 
